@startuml
'https://plantuml.com/class-diagram

interface IEfecto {
    + aplicarEfecto(jugador)
}

class CambioDeVehiculo {
    - vehiculo: Vehiculo
    + CambioDeVehiculo(nuevoVehiculo)
    + aplicarEfecto(jugador)
}

class Penalizacion {
    - movimientos: int
    + Penalizacion(penalizacion: int)
    + aplicarEfecto(jugador)
}

class Porcentaje {
    - porcentaje: int
    + Porcentaje(porcentaje: int)
    + aplicarEfecto(jugador)
}

class Retroceso {
    + aplicarEfecto(jugador)
}

class FinDelJuego {
    + aplicarEfecto(jugador)
}

CambioDeVehiculo <|.. IEfecto 
Penalizacion <|.. IEfecto

IEfecto ..|> FinDelJuego
IEfecto ..|> Porcentaje
IEfecto ..|> Retroceso

@enduml